--- a/src/components/navbar/navbar.sandbox.html
+++ b/src/components/navbar/navbar.sandbox.html
@@ -10,7 +10,7 @@
 
     <h2>Skin tab et default</h2>
     <m-navbar :selected.sync="selected">
-        <m-navbar-item value="salut">Salut</m-navbar-item>
+        <m-navbar-item value="salut" :disabled="true">Salut</m-navbar-item>
         <m-navbar-item value="Bonjour">Bonjour</m-navbar-item>
         <m-navbar-item value="TVA">TVA</m-navbar-item>
         <m-navbar-item value="salut1">Salut1</m-navbar-item>
@@ -29,7 +29,7 @@
 
     <h2>Skin soft</h2>
     <m-navbar :selected.sync="selected" skin="soft" style="background: #09f">
-        <m-navbar-item value="salut">Salut</m-navbar-item>
+        <m-navbar-item value="salut" :disabled="true">Salut</m-navbar-item>
         <m-navbar-item value="Bonjour">Bonjour</m-navbar-item>
         <m-navbar-item value="TVA">TVA</m-navbar-item>
         <m-navbar-item value="salut1">Salut1</m-navbar-item>
@@ -48,7 +48,7 @@
 
     <h2>Skin light</h2>
     <m-navbar :selected.sync="selected" skin="light" max-width="300px">
-        <m-navbar-item value="salut">Salut</m-navbar-item>
+        <m-navbar-item value="salut" :disabled="true">Salut</m-navbar-item>
         <m-navbar-item value="Bonjour">Bonjour</m-navbar-item>
         <m-navbar-item value="TVA">TVA</m-navbar-item>
         <m-navbar-item value="salut1">Salut1</m-navbar-item>
@@ -67,7 +67,7 @@
 
     <h2>Skin dark</h2>
     <m-navbar :selected.sync="selected" skin="dark">
-        <m-navbar-item value="salut">Salut</m-navbar-item>
+        <m-navbar-item value="salut" :disabled="true">Salut</m-navbar-item>
         <m-navbar-item value="Bonjour">Bonj our B onjour Bo njour Bon jour Bonjour</m-navbar-item>
         <m-navbar-item value="TVA">TVA</m-navbar-item>
         <m-navbar-item value="salut1">Salut1</m-navbar-item>
@@ -105,7 +105,7 @@
 
     <h2>Skin simple</h2>
     <m-navbar :selected.sync="selected" skin="simple">
-        <m-navbar-item value="salut">Salut</m-navbar-item>
+        <m-navbar-item value="salut" :disabled="true">Salut</m-navbar-item>
         <m-navbar-item value="Bonjour">Bonjour</m-navbar-item>
         <m-navbar-item value="TVA">TVA</m-navbar-item>
         <m-navbar-item value="salut1">Salut1</m-navbar-item>
@@ -124,7 +124,7 @@
 
     <h2>Skin arrow</h2>
     <m-navbar :selected.sync="selected" skin="arrow" max-width="200px">
-        <m-navbar-item value="salut">Salut</m-navbar-item>
+        <m-navbar-item value="salut" :disabled="true">Salut</m-navbar-item>
         <m-navbar-item value="Bonjour">Bonjour</m-navbar-item>
         <m-navbar-item value="TVA">TVA</m-navbar-item>
         <m-navbar-item value="salut1">Salut1</m-navbar-item>
@@ -140,5 +140,4 @@
         <m-navbar-item value="Bonjour4">Bonjour4</m-navbar-item>
         <m-navbar-item value="TVA4">TVA4</m-navbar-item>
     </m-navbar>
-
 </div>
