--- a/src/components/navbar-item/navbar-item.html
+++ b/src/components/navbar-item/navbar-item.html
@@ -1,15 +1,30 @@
 <li class="m-navbar-item"
     :class="{'m--is-selected': isSelected,
              'm--is-disabled': disabled}"
-    role="menuitem"
-    @keyup.enter="onClick"
-    @click="onClick"
-    @mouseover="onMouseover"
-    @mouseleave="onMouseleave">
-    <router-link class="m-navbar-item__contents" :to="url" v-if="url && !disabled" :aria-selected="isSelected" :aria-haspopup="ariaHaspopup" :aria-expanded="ariaExpanded" :aria-controls="ariaControls">
+    role="menuitem">
+    <router-link class="m-navbar-item__contents"
+                 :to="url" v-if="url && !disabled"
+                 @click="onClick"
+                 @keyup.enter="onClick"
+                 @mouseover="onMouseover"
+                 @mouseleave="onMouseleave"
+                 :aria-selected="isSelected"
+                 :aria-haspopup="ariaHaspopup"
+                 :aria-expanded="ariaExpanded"
+                 :aria-controls="ariaControls">
         <slot></slot>
     </router-link>
-    <span class="m-navbar-item__contents" :tabindex="disabled ? '-1' : '0'" :aria-selected="isSelected" :aria-haspopup="ariaHaspopup" :aria-expanded="ariaExpanded" :aria-controls="ariaControls" v-else>
+    <div class="m-navbar-item__contents"
+         :tabindex="disabled ? '-1' : '0'"
+         @click="onClick"
+         @keyup.enter="onClick"
+         @mouseover="onMouseover"
+         @mouseleave="onMouseleave"
+         :aria-selected="isSelected"
+         :aria-haspopup="ariaHaspopup"
+         :aria-expanded="ariaExpanded"
+         :aria-controls="ariaControls"
+         :role="disabled ? undefined : 'button'" v-else>
         <slot></slot>
-    </span>
+    </div>
 </li>
