fix toolbar animation when focusing.  Whenn on a small display, the toolbar took a lot of place while animating.

--- a/src/components/rich-text-edit/adapter/vue-froala.html
+++ b/src/components/rich-text-edit/adapter/vue-froala.html
@@ -4,7 +4,8 @@
         'vue-froala--focused': isFocused,
         'vue-froala--unfocused': !isFocused,
         'vue-froala--collapsed': collapsed,
-        'vue-froala--animated': isAnimated
+        'vue-froala--animated': isTouched,
+        'vue-froala--dirty': isDirty
     }">
     <component ref="editor" :is="tag"></component>
 </div>
