MODUL-286 - ajustement des props du composant m-plus

--- a/src/components/plus/plus.sandbox.html
+++ b/src/components/plus/plus.sandbox.html
@@ -5,7 +5,7 @@
                 :disabled="exemple1Disabled"
                 :large="exemple1Large"
                 :border="exemple1Border"
-                :skin="exemple1SkinLight ? 'light' : 'interactive'"
+                :skin="exemple1SkinLight ? 'light' : 'default'"
                 @click="exemple1ToggleOpen"></m-plus>
     </div>
     <div class="m-u--margin-top--l">
