--- a/src/components/plus/plus.scss
+++ b/src/components/plus/plus.scss
@@ -7,6 +7,7 @@ $m-plus--icon-height: 1px !default;
 
 .m-plus {
     position: relative;
+    display: inline-flex;
 
     &::before,
     &::after {
