rich-text-edit wouldn't animate correctly on first focus

--- a/src/components/rich-text-edit/adapter/vue-froala.html
+++ b/src/components/rich-text-edit/adapter/vue-froala.html
@@ -6,7 +6,7 @@
         'vue-froala--focused': isFocused,
         'vue-froala--unfocused': !isFocused,
         'vue-froala--collapsed': collapsed,
-        'vue-froala--animated': isTouched,
+        'vue-froala--animated': isInitialized,
         'vue-froala--dirty': isDirty
     }">
     <component ref="editor" :is="tag"></component>
