--- a/src/components/tree/tree.html
+++ b/src/components/tree/tree.html
@@ -1,5 +1,5 @@
 <div class="m-tree">
-    <span v-if="propTreeEmpty" class="m-tree__empty" ref="empty-tree-txt">{{ emptyTreeTxt }}</span>
+    <span v-if="propTreeEmpty" class="m-tree__empty" ref="empty-tree-txt"><m-i18n k="m-tree:empty"></m-i18n></span>
     <template v-else>
         <m-button ref="button-toggle-visibility" skin="secondary" @click="toggleAllVisibility">{{ treeVisibilityTxt }}</m-button>
         <ul>
@@ -8,6 +8,6 @@
     </template>
     <div v-if="errorTree" class="m-tree__error" >
         <m-icon name="m-svg__error-filled"></m-icon>
-        <span ref="error-tree-txt">{{ errorTreeTxt }}</span>
+        <span ref="error-tree-txt"><m-i18n k="m-tree:error"></m-i18n></span>
     </div>
 </div>
