use mousedown instead of click

--- a/src/components/rich-text-edit/adapter/vue-froala.html
+++ b/src/components/rich-text-edit/adapter/vue-froala.html
@@ -1,6 +1,6 @@
 <div class="vue-froala"
     @click.stop
-    @click.capture="isDirty = true"
+    @mousedown.capture="isDirty = true"
     @touchstart.capture="isDirty = true"
     :class="{
         'vue-froala--focused': isFocused,
