--- a/src/components/tree-node/tree-node.html
+++ b/src/components/tree-node/tree-node.html
@@ -1,6 +1,6 @@
 <li class="m-tree-node">
-    <div v-if="hasValidChildren()" class="m-tree-node__with-children">
-        <div class="m-tree-node__with-children__header" @click="toggleChildrenVisibility()">
+    <div v-if="hasValidChildren" class="m-tree-node__with-children">
+        <div class="m-tree-node__with-children__header" @click="toggleChildrenVisibility">
             <span class="m-tree-node__with-children__header__icon" :class="{ 'm--is-closed': open}"></span>
             <m-file-tree v-if="fileTree" :file="node.content" :is-folder-open="open" :is-a-folder="true"></m-file-tree>
             <span>{{ nodeTitle }}</span>
@@ -14,11 +14,11 @@
             </ul>
         </transition>
     </div>
-    <template v-else-if="validNode()" >
+    <template v-else-if="validNode" >
             <m-link :mode="typeLink" class="m-tree-node__single-node" @click="selectNewNode(propCurrentPath)" :disabled="inactiveButton">
                 <m-file-tree v-if="fileTree" :file="node.content"></m-file-tree>
                 <span>{{ nodeTitle }}</span>
             </m-link>
-            <m-icon v-if="nodeSelected()" :name="selectionIcon"></m-icon>
+            <m-icon v-if="nodeSelected" :name="selectionIcon"></m-icon>
     </template>
 </li>
